<resources>
    <string name="app_name">app2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Numero1">Numero 1</string>
    <string name="Numero2">Numero 2</string>
    <string name="tittle">Operaciones Basicas</string>
    <string name="Btncalcular">calcular</string>
    <string name="suma">Suma</string>
    <string name="resta">Resta</string>
    <string name="multiplicacion">Multiplicación</string>
    <string name="division">División</string>

</resources>
