<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:text="@string/tittle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="#3a3a3a"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="6dp"
        android:background="#c62339ff"
        >

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        >


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/numero1"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/Numero1"
            android:textSize="18sp"

            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/numero2"
            android:layout_weight="1"
            android:hint="@string/Numero2"
            android:gravity="center"
            android:textSize="18sp"
            />
    </LinearLayout>


    <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            >

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suma"
                android:id="@+id/suma"
                android:textSize="18sp"
                android:textColor="#3a3a3a"
                android:textStyle="bold"

            android:onClick="Click" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resta"
                android:id="@+id/resta"
                android:textSize="18sp"
                android:textColor="#3a3a3a"
                android:textStyle="bold"
                android:onClick="Click" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplicacion"
                android:id="@+id/multiplicacion"
                android:textSize="18sp"
                android:textColor="#3a3a3a"
                android:textStyle="bold"
                android:onClick="Click" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/division"
                android:id="@+id/division"
                android:textSize="18sp"
                android:textColor="#3a3a3a"
                android:textStyle="bold"
                android:onClick="Click" />
        </RadioGroup>



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        >


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Btncalcular"
            android:textSize="30sp"
            android:id="@+id/Btncalcular"
            android:textStyle="bold"
            android:textColor="#c60a114c"

            android:onClick="calcular" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Resultado"
            android:id="@+id/resultado"
            android:textSize="50sp"

            />

    </LinearLayout>

</LinearLayout>
